refactor(threads): use virtual threads and platform thread factories across modules for improved performance and clarity